--- a/css/style.css
+++ b/css/style.css
@@ -1,40 +1,97 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,300&display=swap');
+
 *{
-    margin:0
+    margin:0;
+    font-family: 'Roboto', sans-serif;
+}
+html {
+    scroll-behavior: smooth;
+  }
+  
+nav{
+    height:50px;
+    background-color: black;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding:10px;
+}
+nav svg{
+    color:white;
+    height:50px;
+    width: 50px;
+}
+.nav-left{
+    display: flex;
+    align-items:center;
+    justify-content: center;
+    margin-left:20px;
+}
+.nav-left svg{
+    animation:3s  infinite  nav-svg;
+}
+
+@keyframes nav-svg {     
+
+   25% { 
+    color:white;
+   }
+   50% { 
+    color:black;
+    float:left;
+   }
+   75% { 
+    color:white;
+   }
+   100% { 
+    color:black;
+   }
+} 
+
+
+
+nav p{
+    color:white;
+    margin-left:20px;
+    font-size: 30px;
 }
 .app{
     display:flex;
     align-items:center;
     flex-direction: column;
+    justify-content: center;
 }
 .bottom{
     width:80%;
-    height:100vh;
+    height:auto;
+    padding:20px;
 }
 .top{
-    background-image: url("https://www.mondou.com/media/b5dae510-a918-407f-ab80-3acf3e9163cc/nq05hg/Conseil/Sant%C3%A9/Grippe-chat-chien/Grippe-chat/CO_chat-grippe_780X340.jpg");
+    background: url("https://www.consoglobe.com/wp-content/uploads/2021/11/chat-maison_2079791452_ban-645x338.jpg") no-repeat center;
+    background-size: cover;
     width:100%;
-    height:400px;
-    background-size:cover;
-    background-repeat: no-repeat;
-    margin-bottom:100PX;
+    height:90vh;
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
+}
+.title{
+    font-size:50px;
+    text-align:center;
+    margin-bottom:30px;
+    margin-top:60px;
 }
 .top p{
     font-size:40px;
-    color:white;
+    color: white;
 }
 .chat-list{
     display:grid;
     grid-template-columns: repeat(3, 1fr);
     border-radius:30px;
-    padding:20px;
+    grid-gap:10px;
 }   
-.chat-list img{
-    height:90px;
-    width:200px;
-}
 .chat{
     margin-bottom:40px;
     display:flex;
@@ -42,3 +99,325 @@
     justify-content: center;
     align-items: center;
 }
+.top-bottom a{
+
+    border-radius:50px;
+    margin-top:100px;
+}
+
+.top-bottom{
+    height:50vh;
+    display:flex;
+    align-items:center;
+    flex-direction: column;
+    width:40%
+}
+.top-bottom svg{
+    height:50px;
+    width:50px;
+    color: white;
+    background-color: black;
+    border-radius: 100%;
+    transform: rotate(180deg); 
+}
+.top-bottom svg:hover{
+    animation:2s  forwards button;
+}
+@keyframes button { to { color:black; background-color: white; }  }
+
+
+.top-bottom p{
+    font-size:20px; 
+    text-align: center;
+    color:black;
+}
+.part{
+    background-color: black;
+    height:1px;
+    width:100%;
+    margin-top:40px;
+
+}
+.section{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top:10px;
+    height:80vh;
+}
+.left{
+    width:50%;
+}
+.left img{
+    height:300px;
+    width:500px;
+}
+.right{
+    width:50%;
+    margin-left:50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.right-btn{
+    height:10px;
+    width:60px;
+    background-color: black;
+    padding:1.4rem;
+    border-radius:30px;
+    color:white;
+    text-decoration:none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top:30px;
+
+}
+.right-btn:hover{
+    animation:2s  forwards button2;
+}
+@keyframes button2 { to { background-color:white; color:black; border:black 1px solid;font-weight: bold;;}  }
+
+
+.footer{
+    background-color: black;
+    color:white;
+    display: flex;
+    padding:30px;
+    padding-left:50px;
+    padding-right:50px;
+}
+.footer p{
+    color:rgba(255,255,255,0.7);     
+}
+.footer-title{
+    text-align:center;
+}
+.footer-description{
+    padding:20px;
+}
+
+.section-middle{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top:20px;
+}
+.middle{
+    height:30vh;
+    width:1px;
+    background-color: black;
+    margin:3rem;
+
+}
+.border{
+    padding:1rem;
+    border:1px solid black;
+}
+.timeline{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position:relative;
+    margin-top:20px;
+}
+.timeline ul{
+    list-style: none;
+    width:100%;
+    margin-right:30px;
+    margin-top:30px;
+    margin-bottom:30px;
+}
+
+.timeline:before{
+    content: '';
+    position: absolute;
+    height:100%;
+    width:5px;
+    left:50%;
+    background-color: gray;
+}   
+.timeline li{
+    padding:20px;
+    border:2px solid black;
+    color:white;
+    margin-bottom:20px;
+    position: relative;
+    color:black;
+    text-align: justify;
+    margin-top:40px;
+}
+
+.timeline ul li:nth-child(odd){
+    float:left;
+    clear: right;
+    width:400px;
+    height:auto;
+    padding:2rem;
+    border-top-left-radius: 50px;
+    border-bottom-left-radius:50px;
+    border-bottom-right-radius: 50px;;
+    padding:20px;
+    text-align: end;
+    
+}
+.timeline ul li:nth-child(even){
+    float:right;
+    clear:left;
+    width:400px;
+    height:auto;
+    border-top-right-radius: 50px;
+    border-bottom-left-radius:50px;
+    border-bottom-right-radius: 50px;
+    padding:20px;
+}
+
+.timeline-title{
+    font-weight: bold;
+    font-size:20px;
+}
+.timeline-date  {
+    font-size:10px;
+    padding-bottom:20px;
+}
+.timeline-detail{
+    display: flex;
+}
+.timeline-detail img{
+    height:150px;
+    width:150px;
+    padding:10px;
+    border-radius:100px;
+}
+.social{
+    display: flex;
+    justify-content: space-around;
+    align-content: center;
+    margin-bottom:30px;
+    margin-top:50px;
+}
+.social svg{
+    height:100px;
+    width:100px;
+    color:black;
+}
+.section-up{
+    height:20vh;
+    position: relative;
+    display: flex;
+    justify-content: center;
+}
+.up{
+    background-color: black;
+    width:50px;
+    height:50px;    
+    border-radius:100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    bottom:0px;
+}
+.up svg{
+    height:30px;
+    width:30px;
+    color:white;
+}
+.up:hover{
+animation:2s  forwards up;
+}
+.up svg:hover{
+    animation:1s  forwards up-svg;
+}
+@keyframes up {     
+        100% { color:black; 
+            transform:rotate(360deg);
+            background-color:white; 
+        }
+    } 
+
+@keyframes up-svg { to { color:black; }  }
+
+
+@media (max-width: 900px) { 
+    .top-bottom{
+        width:100%;
+    }
+    .chat-list{
+        display: flex;
+        flex-direction: column;
+    }
+    .section{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .title{
+        margin-bottom:40px;
+    }
+    .section img{
+        height:150px;
+        width:300px;
+        margin-left:-40px;
+        margin-bottom:20px;
+    }
+    .section .right{
+        width:100%;
+        margin:0;
+    }
+    .timeline ul {
+        display: flex;
+        justify-content: center;
+        align-items: center ;
+        flex-direction: column  ;
+    }
+    .timeline ul li:nth-child(odd){
+        width:200px;
+        border-top-right-radius:50px;
+        float:none;
+
+    }
+    .timeline ul li:nth-child(even){
+        width:200px;
+        display: flex;
+        border-top-left-radius:50px;
+        float:none
+    }
+    .timeline-detail{
+        display: flex;
+        flex-direction: column;
+    }
+    .timeline:before{
+        display:none
+    }
+    .mapouter{
+        display:none
+    }
+ }
+
+
+ .load{
+     height:100vh;
+     width:100%;
+     background-color: black;
+     display: flex;
+     align-items: center;
+     justify-content: center;
+ }
+ .load svg{
+     height:150px;
+     width:150px;
+     color:black;   
+     animation:2s  forwards load-svg;
+ }
+
+ @keyframes load-svg {     
+
+    100% { 
+        transform:rotate(360deg);
+        color:white;
+        height:430px;
+        width:500px;
+    }
+} 
